Fix wrapping of long lines in code blocks (#2)

--- a/assets/stylesheets/styles.less
+++ b/assets/stylesheets/styles.less
@@ -236,8 +236,12 @@ sup {
     .highlight {
       margin-bottom: 1.25rem;
 
-      code {
+      pre code {
         font-weight: normal;
+        overflow-x: auto;
+        padding-bottom: 0.75em;
+        padding-top: 0.75em;
+        white-space: pre;
       }
     }
   }
